# cyphal_service

./: Cargo.toml  README.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
config/: cyphal.toml.example  cyphal_service.service
src/: cli.rs  config.rs  daemon.rs  lib.rs  main.rs
src/commands/: diag.rs  get_info.rs  hello.rs  help.rs  mod.rs  nodes.rs  pnp.rs
src/pnp/: allocator.rs  db.rs  mod.rs
src/transport/: can_gsusb.rs  can_socketcan.rs  mod.rs  serial.rs  udp.rs
tests/: pnp_udp_integration.rs
