[package]
name = "cyphal_service"
version = "0.1.0"
edition = "2024"
description = "Cyphal Linux Service - systemd daemon with REPL CLI"
license = "MIT"
authors = ["Cyphal Service Contributors"]

[[bin]]
name = "cyphal_service"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.44", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
rustyline = "14.0"
sd-notify = "0.4"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
canadensis = "0.6.1"
canadensis_core = "0.6.0"
canadensis_can = "0.6.0"
canadensis_data_types = "0.6.0"
canadensis_serial = "0.6.0"
canadensis_udp = { version = "0.6.0", features = ["std"] }
canadensis_encoding = "0.6.0"
rusb = "0.9"
serialport = "4"
log = "0.4"
tracing-log = "0.2"
rand = "0.8"
heapless = "0.9"

[target.'cfg(target_os = "linux")'.dependencies]
canadensis_linux = "0.6.0"
socketcan = "3"

[profile.release]
strip = true
opt-level = 3
